kubernetes/manifests/virtual-service-vector-search.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: avs-vs
  namespace: avs
spec:
  hosts:
    - "*"
  gateways:
    - avs-gw
  http:
    - match:
        - uri:
            prefix: /
          port: 80
      route:
        - destination:
            port:
              number: 8080
            host: sematic-search-app-quote-semantic-search.avs.svc.cluster.local
    - match:
        - uri:
            prefix: /
          port: 5000
      route:
        - destination:
            port:
              number: 5000
            host: avs-gke-aerospike-vector-search.avs.svc.cluster.local
